--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/pg-adapter": "^1.7.4",
     "@hookform/resolvers": "^3.9.1",
+    "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "next": "15.1.3",
     "next-auth": "^5.0.0-beta.25",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
