--- a/database/docker-compose.yaml
+++ b/database/docker-compose.yaml
@@ -1,26 +1,23 @@
 services:
-  postgres:
-    image: postgres:latest
-    container_name: postgres
+  mysql:
+    image: mysql:latest
+    container_name: mysql
     restart: always
     ports:
-      - "5432:5432"
+      - "3307:3306"
     environment:
-      POSTGRES_DB: auth_db
-      POSTGRES_USER: monte
-      POSTGRES_PASSWORD: password
+      MYSQL_DATABASE: auth_db
+      MYSQL_USER: monte
+      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: rootpassword
     volumes:
-      - ./postgres_data:/var/lib/postgresql/data
-  pgadmin:
-    image: dpage/pgadmin4
-    container_name: pgadmin
+      - ./mysql_data:/var/lib/mysql
+
+  adminer:
+    image: adminer:latest
+    container_name: adminer
     restart: always
     ports:
-      - "5050:80"
-    environment:
-      PGADMIN_DEFAULT_EMAIL: user@gmail.com
-      PGADMIN_DEFAULT_PASSWORD: password
-    volumes:
-      - ./pgadmin_data:/var/lib/pgadmin
+      - "8080:8080"
     depends_on:
-      - postgres
+      - mysql
