--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@auth/pg-adapter": "^1.7.4",
+    "@auth/prisma-adapter": "^2.7.4",
     "@hookform/resolvers": "^3.9.1",
+    "@prisma/client": "^6.2.0",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.12.0",
     "next": "15.1.3",
     "next-auth": "^5.0.0-beta.25",
     "nodemailer": "^6.9.16",
@@ -26,7 +29,7 @@
     "@eslint/eslintrc": "^3",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^20",
+    "@types/node": "^20.17.12",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.10",
     "@types/react": "^19",
@@ -34,6 +37,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
+    "prisma": "^6.2.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
